src/assets/style.css
@charset "UTF-8";

/* custom styles*/

::selection {
    background-color: #2222;
    color: #111;
}
#app{
    height: 100%;
}
.nav-bar{
    background: #fffff8;
    color: #111;
    position: fixed;
    margin-top:0;
    top:0;
    padding: 20px;
    width:100%;
    height: 20px;
}
.footer {
    background: #fffff8;
    color: #111;
    position: fixed;
    margin-bottom:2px;
    bottom:0;
    /*padding: 20px;
    width:100%;
    height: 30px;*/
}
.style-router{
    margin-bottom:60px;
}
.style-dark-mode{
    background: rgb(33, 33, 33)!important;
    color: white!important;
}

